[tool.black]
line-length = 88
skip-string-normalization = true
target-version = ["py312"]

[tool.poetry]
name = "power-flow-game"
version = "0.0.0"
description = "A game based on electricity market coupling"
authors = ["Robbie Muir <robbiemuir7@gmail.com>", "Roman Cantu <>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
pypsa = "^0.34.1"
pandas = "^2.2.3"
numpy = "^2.2.5"

[tool.poetry.dev-dependencies]
black = "^25.1.0"
flake8 = "^7.2.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.2.0"
